terraform/ec2.tf
###############################################
# Latest Amazon Linux 2023 AMI
###############################################

data "aws_ami" "amazon_linux" {
  most_recent = true
  owners      = ["amazon"]
  filter {
    name   = "name"
    values = ["al2023-ami-*-x86_64"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  filter {
    name   = "architecture"
    values = ["x86_64"]
  }
}

###############################################
# EC2 Instance
###############################################

resource "aws_instance" "ec2_order" {
  ami                         = data.aws_ami.amazon_linux.id
  instance_type               = var.instance_type
  subnet_id                   = aws_subnet.private_1.id
  vpc_security_group_ids      = [aws_security_group.ec2_sg.id]
  associate_public_ip_address = false
  iam_instance_profile        = aws_iam_instance_profile.microservice_instance_profile.name

  user_data = replace(<<-EOF
    #!/bin/bash
    mkdir -p /etc/docker
    cat > /etc/docker/daemon.json <<'JSON'
    {
      "log-driver": "awslogs",
      "log-opts": {
        "awslogs-region": "ap-southeast-1",
        "awslogs-group": "/microservice/order-service"
      }
    }
    JSON
    systemctl restart docker
  EOF
  , "\r\n", "\n")

  tags = {
    Name      = "${local.name_prefix}-ec2-order"
    SSMAccess = "true"
  }
}

resource "aws_instance" "ec2_payment" {
  ami                         = data.aws_ami.amazon_linux.id
  instance_type               = var.instance_type
  subnet_id                   = aws_subnet.private_2.id
  vpc_security_group_ids      = [aws_security_group.ec2_sg.id]
  associate_public_ip_address = false
  iam_instance_profile        = aws_iam_instance_profile.microservice_instance_profile.name

  user_data = replace(<<-EOF
    #!/bin/bash
    mkdir -p /etc/docker
    cat > /etc/docker/daemon.json <<'JSON'
    {
      "log-driver": "awslogs",
      "log-opts": {
        "awslogs-region": "ap-southeast-1",
        "awslogs-group": "/microservice/payment-service"
      }
    }
    JSON
    systemctl restart docker
  EOF
  , "\r\n", "\n")

  tags = {
    Name      = "${local.name_prefix}-ec2-payment"
    SSMAccess = "true"
  }
}
